--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server -c-1 -p 8083",
-    "build": "find public/ -type f -print0 | xargs -0 sed -i 's|/src/|/progressive-web-app/src/|g'"
+    "build": "find public/ -type f -print0 | xargs -0 sed -i 's|/src/|/progressive-web-app/src/|g; s|sw.js|/progressive-web-app/sw.js|g'"
   },
   "keywords": [
     "pwa"
